k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-upload-service
spec:
  selector:
    app: image-upload-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
