k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-upload-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - image-upload.local
      secretName: image-upload-tls
  rules:
    - host: image-upload.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-upload-service
                port:
                  number: 80
